--- a/brokerage.html
+++ b/brokerage.html
@@ -53,7 +53,7 @@
 
           </li>
 <li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
-<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
@@ -72,7 +72,7 @@
             </ul>
   </li>
 <li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
           <li class="subnav-mobile-custom" id="subNavMobile">
             <ul>
@@ -86,7 +86,7 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-4"><a href="tour.html">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
@@ -134,15 +134,15 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
   <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
   <a href="#" class="col-12 link-outline-2"><p class="col-10">LANDLORD & SELLER REPRESENTATION</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
 </a>
 
     <a href="#" class="col-12 link-outline-2"><p class="col-10">TENANT & BUYER REPRESENTATION</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
 
   <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">SITE SELECTION & ACQUISITION</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
 
 
@@ -165,7 +165,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
   <div class="portfolio-list col-12 float-left">
     <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="Outside view of The Riviera property">
   </div>
 <h3>THE RIVIERA</h3>
 </a>
@@ -177,7 +177,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="Outside view of the Visions Property">
 </div>
 <h3>THE VISION</h3>
 </a>
@@ -188,7 +188,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
 </div>
 <h3>DIAMOND RIDGE</h3>
 </a>
@@ -198,7 +198,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 
 <div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-0">
   <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL LISTINGS</p>
-  <img src="assets/arrow.svg" alt="#" class="col-2">
+  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
   </a>
 </div>
 
