--- a/development.html
+++ b/development.html
@@ -48,7 +48,7 @@
 
           </li>
 <li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
-<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
@@ -67,7 +67,7 @@
             </ul>
   </li>
 <li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menarrow pointing right"></a></li>
 
           <li class="subnav-mobile-custom" id="subNavMobile">
             <ul>
@@ -129,23 +129,23 @@ We are reimagining the role that a workplace plays in the world so that it can w
   <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
   <a href="#" class="col-12 link-outline-2"><p class="col-10">GENERAL CONTRACTING & PROJECT OVERSIGHT</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
 </a>
 
     <a href="#" class="col-12 link-outline-2"><p class="col-10">ESTIMATING & SCHEDULING</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
 
   <a href="#" class="col-12 link-outline-2"><p class="col-10">SUSTAINABLE DEVELOPMENT PRACTICES</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
 
     <a href="#" class="col-12 link-outline-2"><p class="col-10">TENANT COORDINATION</p>
-  <img src="assets/arrow.svg" alt="#" class="col-2">
+  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
       </a>
 
       <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">DUE DILIGENCE OVERSIGHT</p>
-    <img src="assets/arrow.svg" alt="#" class="col-2">
+    <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
         </a>
 
 
@@ -167,7 +167,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
   <div class="portfolio-list col-12 float-left">
     <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="Outside view of the Riviera property">
   </div>
 <h3>THE RIVIERA</h3>
 </a>
@@ -179,7 +179,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="Outdoor view of the Vision property">
 </div>
 <h3>THE VISION</h3>
 </a>
@@ -190,7 +190,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
 </div>
 <h3>DIAMOND RIDGE</h3>
 </a>
@@ -200,7 +200,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
 
 <div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-0">
   <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL PROJECTS</p>
-  <img src="assets/arrow.svg" alt="#" class="col-2">
+  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
   </a>
 </div>
 
