--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           </li>
 <li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
-<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
@@ -74,7 +74,7 @@
             </ul>
   </li>
 <li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
           <li class="subnav-mobile-custom" id="subNavMobile">
             <ul>
@@ -139,11 +139,11 @@ We create spaces that people want to come to, not just have to. Dynamic spaces t
 
 <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
   <a href="who-we-are.html" class="link-outline-2 col-12"><p class="col-10">WHO IS BURNS SCALO REAL ESTATE</p>
-  <img src="assets/arrow.svg" alt="#" class="col-2">
+  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
   </a>
 
   <a href="what-we-do.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
-<img src="assets/arrow.svg" alt="what-we-do.html" class="col-2">
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
 </div>
 
@@ -184,7 +184,7 @@ FEATURED PROPERTIES
   <div class="portfolio-list col-12 float-left">
     <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="Outside view of the Riviera property.">
   </div>
 <h3>THE RIVIERA</h3>
 </a>
@@ -196,7 +196,7 @@ FEATURED PROPERTIES
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="Outside view of the Vision property.">
 </div>
 <h3>THE VISION</h3>
 </a>
@@ -207,7 +207,7 @@ FEATURED PROPERTIES
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
 </div>
 <h3>DIAMOND RIDGE</h3>
 </a>
