--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
 
           </li>
 <li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
-<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
@@ -69,7 +69,7 @@
             </ul>
   </li>
 <li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
           <li class="subnav-mobile-custom" id="subNavMobile">
             <ul>
