--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -114,7 +114,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-      <img src="assets/images/team/scott.png" alt="#" class="col-12">
+      <img src="assets/images/team/scott.png" alt="professional headshot of Scott DiGuglielmo" class="col-12">
         <div class="name-container">
       <h4>Scott DiGuglielmo</h4>
       <h5>Director of Agency Brokerage</h5>
@@ -136,7 +136,7 @@
 
       <div class="container-p col-12 col-md-4 col-xl-3 float-left">
         <div class="portfolio-list col-12 float-left">
-      <img src="assets/images/team/brokerage/pamela.png" alt="#" class="col-12">
+      <img src="assets/images/team/brokerage/pamela.png" alt="professional headshot of Pamela Austin" class="col-12">
       <div class="name-container">
       <h4>Pamela Austin</h4>
       <h5>Brand Ambassador</h5>
@@ -160,7 +160,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/victor.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/victor.png" alt="professional headshot of Victor Konno" class="col-12">
     <div class="name-container">
     <h4>Victor Konno</h4>
     <h5>Leasing Specialist</h5>
@@ -183,7 +183,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/ruby.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/ruby.png" alt="professional headshot of Ruby Scalo" class="col-12">
       <div class="name-container">
     <h4>Ruby Scalo</h4>
     <h5>Leasing Specialist</h5>
@@ -206,7 +206,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/shannon.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/shannon.png" alt="professional headshot of Shannon McGuire" class="col-12">
       <div class="name-container">
     <h4>Shannon McGuire</h4>
     <h5>Leasing Specialist</h5>
@@ -229,7 +229,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/kelley.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/kelley.png" alt="professional headshot of Kelly Hoover Heckathorne" class="col-12">
       <div class="name-container">
     <h4>Kelley Hoover Heckathorne</h4>
     <h5>Director of Brokerage Services</h5>
@@ -251,7 +251,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/john.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/john.png" alt="professional headshot of John Eliopoulos" class="col-12">
       <div class="name-container">
     <h4>John Eliopoulos</h4>
     <h5>Senior Brokerage Advisor</h5>
@@ -272,7 +272,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/greg.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/greg.png" alt="professional headshot of Gregory Schuster" class="col-12">
       <div class="name-container">
     <h4>Gregory Schuster</h4>
     <h5>Leasing Specialist</h5>
@@ -294,7 +294,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/chris.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/chris.png" alt="professional headshot of Chris Bernardi" class="col-12">
       <div class="name-container">
     <h4>Chris Bernardi</h4>
     <h5>Marketing Manager</h5>
@@ -315,7 +315,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/lia.png" alt="professional headshot of Lia Chappel" class="col-12">
       <div class="name-container">
     <h4>Lia Chappel</h4>
     <h5>Marketing Coordinator</h5>
