--- a/team-development.html
+++ b/team-development.html
@@ -101,7 +101,7 @@
 
               <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                 <div class="portfolio-list col-12 float-left">
-                <img src="assets/images/team/steve.png" alt="#" class="col-12">
+                <img src="assets/images/team/steve.png" alt="professional headshot of Steve Whittingham" class="col-12">
                   <div class="name-container">
                 <h4>Steve Whittingham</h4>
                 <h5>Director of Development </h5>
@@ -123,7 +123,7 @@
 
                 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                   <div class="portfolio-list col-12 float-left">
-                  <img src="assets/images/team/travis.png" alt="#" class="col-12">
+                  <img src="assets/images/team/travis.png" alt="professional headshot of Travis Raught" class="col-12">
                     <div class="name-container">
                   <h4>Travis Raught</h4>
                   <h5>Senior Project Manager</h5>
@@ -144,7 +144,7 @@
 
               <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                 <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/braden.png" alt="#" class="col-12">
+    <img src="assets/images/team/braden.png" alt="professional headshot of Braden Rowse" class="col-12">
     <div class="name-container">
     <h4>Braden Rowse, Jr.</h4>
     <h5>Senior Project Manager</h5>
@@ -182,7 +182,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/ryan-c.png" alt="professional headshot of Ryan Crouse" class="col-12">
     <div class="name-container">
     <h4>Ryan Crouse</h4>
     <h5>Project Manager</h5>
@@ -202,7 +202,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/tommy.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/tommy.png" alt="professional headshot of Thomas Feldmeier" class="col-12">
     <div class="name-container">
     <h4>Tom Feldmeier</h4>
     <h5>Assistant Project Manager</h5>
@@ -223,7 +223,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/nickh.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/nickh.png" alt="professional headshot of Nick Hineman" class="col-12">
     <div class="name-container">
     <h4>Nick Hineman</h4>
     <h5>Assistant Project Manager</h5>
@@ -244,7 +244,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/josh-h.png" alt="professional headshot of Joshua Hoskinson" class="col-12">
     <div class="name-container">
     <h4>Joshua Hoskinson</h4>
     <h5>Assistant Project Manager</h5>
@@ -265,7 +265,7 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/nate.png" alt="professional headshot of Nate Carr" class="col-12">
     <div class="name-container">
     <h4>Nate Carr</h4>
     <h5>Assistant Project Manager</h5>
@@ -284,7 +284,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/nick-carr.png" alt="professional headshot of Nick Carr" class="col-12">
     <div class="name-container">
     <h4>Nick Carr</h4>
     <h5>Assistant Project Manager</h5>
@@ -307,7 +307,7 @@
 
   <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/tj.png" alt="#" class="col-12">
+    <img src="assets/images/team/tj.png" alt="professional headshot of TJ Mangis" class="col-12">
       <div class="name-container">
     <h4>TJ Mangis</h4>
     <h5>Health & Safety Manager</h5>
@@ -328,7 +328,7 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/justin.png" alt="professional headshot of Justin Nobilese" class="col-12">
     <div class="name-container">
     <h4>Justin Nobilese</h4>
     <h5>Superintendent</h5>
