--- a/team-management.html
+++ b/team-management.html
@@ -103,7 +103,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/lindsay.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/lindsay.png" alt="professional headshot of Lindsay Files" class="col-12">
               <div class="name-container">
               <h4>Lindsay Files</h4>
               <h5>Chief Financial Officer </h5>
@@ -124,7 +124,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/christie.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/christie.png" alt="professional headshot of Christie Reiber" class="col-12">
               <div class="name-container">
               <h4>Christie Reiber</h4>
               <h5>Chief Investment Officer</h5>
@@ -146,7 +146,7 @@
 
               <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                 <div class="portfolio-list col-12 float-left">
-                <img src="assets/images/team/bob.png" alt="#" class="col-12">
+                <img src="assets/images/team/bob.png" alt="professional headshot of Bob Fittipaldo" class="col-12">
                 <div class="name-container">
               <h4>Bob Fittipaldo</h4>
               <h5>Director of Facilities</h5>
@@ -168,7 +168,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/tim-q.png" alt="professional headshot of Tim Quinn" class="col-12">
               <div class="name-container">
               <h4>Tim Quinn</h4>
               <h5>General Counsel</h5>
@@ -189,7 +189,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Anissa Eckert-Fife" class="col-12">
               <div class="name-container">
               <h4>Anissa Eckert-Fife</h4>
               <h5>Senior Executive Assistant</h5>
@@ -210,7 +210,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Fran Scott" class="col-12">
               <div class="name-container">
               <h4>Fran Scott</h4>
               <h5>Happiness Chief</h5>
@@ -230,7 +230,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/kelly.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/kelly.png" alt="professional headshot of Kelly Mihalik" class="col-12">
               <div class="name-container">
               <h4>Kelly Mihalik</h4>
               <h5>Client Experience Ambassador</h5>
@@ -251,7 +251,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/development/placeholder.png" alt="professional headshot of Angela Gillot" class="col-12">
               <div class="name-container">
               <h4>Angela Gillot</h4>
               <h5>Client Experience Ambassador</h5>
@@ -272,7 +272,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Mike Thomas" class="col-12">
               <div class="name-container">
               <h4>Mike Thomas</h4>
               <h5>Senior Facility Technician</h5>
@@ -292,7 +292,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/nick-f.png" alt="professional headshot of Nick Ferrera" class="col-12">
               <div class="name-container">
               <h4>Nick Ferrera</h4>
               <h5>Facilities Analyst</h5>
@@ -313,7 +313,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/reggie.png" alt="professional headshot of Reggie Maness" class="col-12">
               <div class="name-container">
               <h4>Reggie Maness</h4>
               <h5>Cleaning Operations Supervisor</h5>
@@ -333,7 +333,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Kyrstal Marks" class="col-12">
               <div class="name-container">
               <h4>Krystal Marks</h4>
               <h5>Day Porter</h5>
@@ -354,7 +354,7 @@
 
                             <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                               <div class="portfolio-list col-12 float-left">
-                              <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Gena Batts" class="col-12">
                                 <div class="name-container">
                               <h4>Gena Batts</h4>
                               <h5>Day Porter</h5>
@@ -374,7 +374,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/pj.png" alt="#" class="col-12">
+              <img src="assets/images/team/management/pj.png" alt="professional headshot of PJ Flaherty" class="col-12">
               <div class="name-container">
               <h4>PJ Flaherty</h4>
               <h5>Controller</h5>
@@ -396,7 +396,7 @@
 
                             <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                               <div class="portfolio-list col-12 float-left">
-                  <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                  <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Dana Broderick" class="col-12">
                   <div class="name-container">
                   <h4>Dana Broderick</h4>
                   <h5>Staff Accountant</h5>
@@ -417,7 +417,7 @@
 
                   <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/jake-b.png" alt="professional headshot of Jake Bywalski" class="col-12">
                       <div class="name-container">
                     <h4>Jake Bywalski</h4>
                     <h5>Brokerage Analyst</h5>
@@ -439,7 +439,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                       <div class="portfolio-list col-12 float-left">
-                      <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                      <img src="assets/images/team/management/natalie.png" alt="professional headshot of Natalie Chadwick" class="col-12">
                         <div class="name-container">
                       <h4>Natalie Chadwick</h4>
                       <h5>Financial Analyst</h5>
@@ -461,7 +461,7 @@
 
                 <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                         <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/development/placeholder.png" alt="professional headshot of Adam Dodson" class="col-12">
                     <div class="name-container">
                     <h4>Adam Dodson</h4>
                     <h5>Assistant Controller</h5>
@@ -482,7 +482,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/development/placeholder.png" alt="Taylor Edwards" class="col-12">
                     <div class="name-container">
                     <h4>Taylor Edwards</h4>
                     <h5>Staff Accountant</h5>
@@ -503,7 +503,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/placeholder.png" alt="Placeholder silhouette vector - portrait coming soon" class="col-12">
                     <div class="name-container">
                     <h4>Dylan Pounds</h4>
                     <h5>Staff Accountant</h5>
@@ -524,7 +524,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/jared-s.png" alt="professional headshot of Jared Schaut" class="col-12">
                     <div class="name-container">
                     <h4>Jared Schaut</h4>
                     <h5>Financial Accountant</h5>
@@ -545,7 +545,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Kelsey Wade" class="col-12">
                     <div class="name-container">
                     <h4>Kelsey Wade</h4>
                     <h5>Staff Accountant</h5>
@@ -587,7 +587,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/development/placeholder.png" alt="professional headshot of George Machulin" class="col-12">
                     <div class="name-container">
                     <h4>George Mackulin</h4>
                     <h5>Facilities Technician</h5>
@@ -607,7 +607,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/rich-m.png" alt="professional headshot of Richard Malter, Jr." class="col-12">
                     <div class="name-container">
                     <h4>Richard Malter, Jr.</h4>
                     <h5>Facilities Technician</h5>
@@ -628,7 +628,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/placeholder.png" alt="professional headshot of BJ Miller" class="col-12">
                     <div class="name-container">
                     <h4>BJ Miller</h4>
                     <h5>Facilities Technician</h5>
@@ -654,7 +654,7 @@
 
   <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+    <img src="assets/images/team/management/nick-carangio.png" alt="professional headshot of Nick Carangino" class="col-12">
       <div class="name-container">
     <h4>Nick Carangio</h4>
     <h5>Facilities Technician</h5>
@@ -754,7 +754,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/rich-r.png" alt="professional headshot of Rich Romitz" class="col-12">
 <div class="name-container">
 <h4>Richard Romitz</h4>
 <h5>Facilities Technician</h5>
