--- a/team-management.html
+++ b/team-management.html
@@ -82,8 +82,8 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
-            <li class="nav-item-5"><a href="#">MEMBERS</a></li>
+            <li class="nav-item-4"><a href="tour.html">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-5"><a href="https://www.landport.net/r/sva/login.lpa" target="_blank">MEMBERS</a></li>
             </ul>
 
           </nav>
@@ -189,7 +189,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Anissa Eckert-Fife" class="col-12">
+              <img src="assets/images/team/management/anissa.png" alt="professional headshot of Anissa Eckert-Fife" class="col-12">
               <div class="name-container">
               <h4>Anissa Eckert-Fife</h4>
               <h5>Senior Executive Assistant</h5>
@@ -210,7 +210,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Fran Scott" class="col-12">
+              <img src="assets/images/team/management/fran.png" alt="professional headshot of Fran Scott" class="col-12">
               <div class="name-container">
               <h4>Fran Scott</h4>
               <h5>Happiness Chief</h5>
@@ -251,7 +251,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/development/placeholder.png" alt="professional headshot of Angela Gillot" class="col-12">
+              <img src="assets/images/team/management/angela.png" alt="professional headshot of Angela Gillot" class="col-12">
               <div class="name-container">
               <h4>Angela Gillot</h4>
               <h5>Client Experience Ambassador</h5>
@@ -272,7 +272,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Mike Thomas" class="col-12">
+              <img src="assets/images/team/management/mike-t.png" alt="professional headshot of Mike Thomas" class="col-12">
               <div class="name-container">
               <h4>Mike Thomas</h4>
               <h5>Senior Facility Technician</h5>
@@ -333,7 +333,7 @@
 
               <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-              <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Kyrstal Marks" class="col-12">
+              <img src="assets/images/team/management/krystal.png" alt="professional headshot of Kyrstal Marks" class="col-12">
               <div class="name-container">
               <h4>Krystal Marks</h4>
               <h5>Day Porter</h5>
@@ -396,7 +396,7 @@
 
                             <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                               <div class="portfolio-list col-12 float-left">
-                  <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Dana Broderick" class="col-12">
+                  <img src="assets/images/team/management/dana.png" alt="professional headshot of Dana Broderick" class="col-12">
                   <div class="name-container">
                   <h4>Dana Broderick</h4>
                   <h5>Staff Accountant</h5>
@@ -461,7 +461,7 @@
 
                 <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                         <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="professional headshot of Adam Dodson" class="col-12">
+                    <img src="assets/images/team/management/adam.png" alt="professional headshot of Adam Dodson" class="col-12">
                     <div class="name-container">
                     <h4>Adam Dodson</h4>
                     <h5>Assistant Controller</h5>
@@ -545,7 +545,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="professional headshot of Kelsey Wade" class="col-12">
+                    <img src="assets/images/team/management/kelsey.png" alt="professional headshot of Kelsey Wade" class="col-12">
                     <div class="name-container">
                     <h4>Kelsey Wade</h4>
                     <h5>Staff Accountant</h5>
@@ -566,7 +566,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+                    <img src="assets/images/team/management/steven.png" alt="professional headshot of Steven Hunkele" class="col-12">
                     <div class="name-container">
                     <h4>Steven Hunkele</h4>
                     <h5>Senior Facilities Technician</h5>
@@ -587,7 +587,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/development/placeholder.png" alt="professional headshot of George Machulin" class="col-12">
+                    <img src="assets/images/team/management/george.png" alt="professional headshot of George Machulin" class="col-12">
                     <div class="name-container">
                     <h4>George Mackulin</h4>
                     <h5>Facilities Technician</h5>
@@ -628,7 +628,7 @@
 
                     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
                     <div class="portfolio-list col-12 float-left">
-                    <img src="assets/images/team/management/placeholder.png" alt="professional headshot of BJ Miller" class="col-12">
+                    <img src="assets/images/team/management/bj.png" alt="professional headshot of BJ Miller" class="col-12">
                     <div class="name-container">
                     <h4>BJ Miller</h4>
                     <h5>Facilities Technician</h5>
@@ -734,7 +734,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/david-r.png" alt="professional headshot of David Rhodes" class="col-12">
 <div class="name-container">
 <h4>David Rhodes</h4>
 <h5>Facilities Technician</h5>
@@ -788,7 +788,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/jimmy-s.png" alt="professional headshot of Jimmy Sims" class="col-12">
 <div class="name-container">
 <h4>Jimmy Sims</h4>
 <h5>Senior Facility Technician</h5>
@@ -807,7 +807,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/jared-sims.png" alt="professional headshot of Jared Sims" class="col-12">
 <div class="name-container">
 <h4>Jared Sims</h4>
 <h5>Facilities Technician</h5>
@@ -827,7 +827,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/tim-s.png" alt="professional headshot of Tim Spina" class="col-12">
 <div class="name-container">
 <h4>Tim Spina</h4>
 <h5>Senior Facility Technician</h5>
@@ -857,7 +857,7 @@
 
 <div class="container-p col-12 col-md-4 col-lg-3 float-left">
 <div class="portfolio-list col-12 float-left">
-<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<img src="assets/images/team/management/ken.png" alt="professional headshot of Ken Wagner" class="col-12">
 <div class="name-container">
 <h4>Ken Wagner</h4>
 <h5>Facilities Technician</h5>
