--- a/what-we-do.html
+++ b/what-we-do.html
@@ -80,8 +80,8 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
-            <li class="nav-item-5"><a href="#">MEMBERS</a></li>
+            <li class="nav-item-4"><a href="tour.html">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-5"><a href="https://www.landport.net/r/sva/login.lpa" target="_blank">MEMBERS</a></li>
             </ul>
 
           </nav>
