--- a/insights.html
+++ b/insights.html
@@ -108,11 +108,11 @@
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
-                <a href="portfolio-beacon.html">
+                <a href="insights-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
               <img src="assets/images/portfolio/visionedit.png" alt="#">
               </div>
-            <h3>Corridors of Opportunity: What's next for the Strip District?</h3>
+            <h3>What You Pay In Rent Doesn't Matter</h3>
             <p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
             </a>
             </div>
